--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       SENTRY_REDIS_HOST: redis
       SENTRY_POSTGRES_DSN: ${SENTRY_POSTGRES_DSN}
       SENTRY_EMAIL_HOST: smtp
+      GOOGLE_OAUTH2_CLIENT_ID: ${GOOGLE_OAUTH2_CLIENT_ID}
+      GOOGLE_OAUTH2_CLIENT_SECRET: ${GOOGLE_OAUTH2_CLIENT_SECRET}
     volumes:
       - ./data/sentry:/var/lib/sentry/files
 
