--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,11 @@ services:
       SENTRY_SECRET_KEY: ${SENTRY_SECRET_KEY}
       SENTRY_MEMCACHED_HOST: memcached
       SENTRY_REDIS_HOST: redis
-      SENTRY_POSTGRES_DSN: ${SENTRY_POSTGRES_DSN}
+      SENTRY_POSTGRES_HOST: ${SENTRY_POSTGRES_HOST}
+      SENTRY_DB_NAME: sentry
+      SENTRY_DB_USER: ${SENTRY_DB_USER}
+      SENTRY_DB_PASSWORD: ${SENTRY_DB_PASSWORD}
+      SENTRY_POSTGRES_PORT: ${SENTRY_POSTGRES_PORT}
       SENTRY_EMAIL_HOST: smtp
       GOOGLE_OAUTH2_CLIENT_ID: ${GOOGLE_OAUTH2_CLIENT_ID}
       GOOGLE_OAUTH2_CLIENT_SECRET: ${GOOGLE_OAUTH2_CLIENT_SECRET}
