--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       SENTRY_DB_PASSWORD: ${SENTRY_DB_PASSWORD}
       SENTRY_POSTGRES_PORT: ${SENTRY_POSTGRES_PORT}
       SENTRY_EMAIL_HOST: smtp
-      GOOGLE_OAUTH2_CLIENT_ID: ${GOOGLE_OAUTH2_CLIENT_ID}
-      GOOGLE_OAUTH2_CLIENT_SECRET: ${GOOGLE_OAUTH2_CLIENT_SECRET}
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
     volumes:
       - ./data/sentry:/var/lib/sentry/files
 
